WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
75920
-[DOMRange renderedImageForcingBlackText:] fails with non-user-selectable text
https://bugs.webkit.org/show_bug.cgi?id=75920
Summary
-[DOMRange renderedImageForcingBlackText:] fails with non-user-selectable text
mitz
Reported
2012-01-09 17:50:49 PST
-[DOMRange renderedImageForcingBlackText:] fails with non-user-selectable text
Attachments
Dropped the requirements that the range endpoints be visible positions
(4.66 KB, patch)
2012-01-09 18:02 PST
,
mitz
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2012-01-09 18:02:55 PST
Created
attachment 121774
[details]
Dropped the requirements that the range endpoints be visible positions
mitz
Comment 2
2012-01-09 18:15:50 PST
Fixed in <
http://trac.webkit.org/r104530
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug