-[DOMRange renderedImageForcingBlackText:] fails with non-user-selectable text https://bugs.webkit.org/show_bug.cgi?id=75920

Reviewed by Darin Adler.

Source/WebCore:

Test: added to TestWebKitAPI/Tests/mac/RenderedImageFromDOMRange.mm

* page/mac/FrameMac.mm:
(WebCore::Frame::rangeImage): Removed the requirement that the start and end positions used
for setting the selection in the render tree be candidates.

Tools:

* TestWebKitAPI/Tests/mac/RenderedImageFromDOMRange.mm:
(TestWebKitAPI::TEST): Added a test for a range in a
-webkit-user-select: none; block.



Canonical link: https://commits.webkit.org/92710@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@104530 268f45cc-cd09-0410-ab3c-d52691b4dbfc